--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,18 +1,103 @@
-/* Error: Can't find stylesheet to import.
- *   ,
- * 4 | @import "common/reset";
- *   |         ^^^^^^^^^^^^^^
- *   '
- *   src\scss\sub\_location.scss 4:9  @import
- *   src\scss\style.scss 14:9         root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 4 \2502  @import \"common/reset\";\d\a   \2502          ^^^^^^^^^^^^^^\a   \2575 \a   src\\scss\\sub\\_location.scss 4:9  @import\a   src\\scss\\style.scss 14:9         root stylesheet";
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
+
+ul, ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  outline: 0;
+}
+
+header {
+  width: 100%;
+  background: #333;
+}
+header .inner {
+  width: 1180px;
+  height: 100px;
+  margin: 0px auto;
+  position: relative;
+}
+header .inner h1 {
+  position: absolute;
+  left: 0px;
+  bottom: 20px;
+}
+header .inner h1 a {
+  font: bold 24px/1 "arial";
+  color: #fff;
+}
+header .inner #gnb {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+}
+header .inner #gnb li {
+  float: left;
+}
+header .inner #gnb li a {
+  display: inline-block;
+  padding: 22px 30px;
+  font: 14px/1 "arial";
+  color: #fff;
+}
+
+main {
+  padding: 100px 0px;
+}
+main > .inner {
+  width: 1180px;
+  min-height: 500px;
+  margin: 0px auto;
+}
+main > .inner h1 {
+  font: 30px/1 "arial";
+  color: #333;
+  margin-bottom: 20px;
+}
+
+footer {
+  width: 100%;
+  border-top: 1px solid #ddd;
+  padding: 50px 0px;
+}
+footer .inner {
+  width: 1180px;
+  margin: 0px auto;
+  text-align: center;
+}
+footer .inner p {
+  font: 12px/1 "arial";
+  color: #888;
+  text-align: center;
+}
+
+@media screen and (max-width: 1179px) {
+  header .inner {
+    width: 100%;
+  }
+  header .inner h1 {
+    left: 3vw;
+  }
+  header .inner #gnb {
+    display: none;
+  }
+
+  main {
+    padding: 80px 40px;
+  }
+  main .inner {
+    width: 100%;
+  }
+
+  footer .inner {
+    width: 100%;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
