--- a/src/css/style.css
+++ b/src/css/style.css
@@ -99,5 +99,20 @@ footer .inner p {
     width: 100%;
   }
 }
+figure {
+  width: 100%;
+  height: 500px;
+  background: cyan;
+}
+
+#info {
+  width: 100%;
+  padding: 100px 0px;
+}
+#info .inner {
+  width: 1180px;
+  min-height: 300px;
+  margin: 0px auto;
+}
 
 /*# sourceMappingURL=style.css.map */
