--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,8 @@
 @import "common/layout";
 
 //main style
+@import "main/visual";
+@import "main/info";
 
 //sub page style
 @import "sub/department";
