--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,10 @@ a {
   outline: 0;
 }
 
+body {
+  background: #efefef;
+}
+
 header {
   width: 100%;
   background: #333;
@@ -113,6 +117,56 @@ figure {
   width: 1180px;
   min-height: 300px;
   margin: 0px auto;
+}
+
+.gallery .inner > section::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.gallery .inner > section article {
+  width: 25%;
+  height: 300px;
+  float: left;
+  padding: 10px;
+}
+.gallery .inner > section article > .inner {
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+}
+.gallery .inner > section article > .inner .pic {
+  width: 100%;
+  height: 180px;
+  margin-bottom: 20px;
+}
+.gallery .inner > section article > .inner .pic img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.gallery .inner > section article > .inner h2 {
+  font: normal 14px/1.2 "arial";
+  color: #777;
+}
+.gallery .pop {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background: rgba(0, 0, 0, 0.9);
+  padding: 5vw;
+}
+.gallery .pop span {
+  font: bold 14px/1 "arial";
+  color: #fff;
+  position: absolute;
+  top: 3vw;
+  right: 5vw;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
