--- a/src/css/style.css
+++ b/src/css/style.css
@@ -160,6 +160,17 @@ figure {
   background: rgba(0, 0, 0, 0.9);
   padding: 5vw;
 }
+.gallery .pop img {
+  width: 100%;
+  height: 95%;
+  object-fit: contain;
+  margin-bottom: 15px;
+}
+.gallery .pop p {
+  font: 14px/1.2 "arial";
+  color: #fff;
+  text-align: center;
+}
 .gallery .pop span {
   font: bold 14px/1 "arial";
   color: #fff;
