--- a/src/scss/sub/_gallery.scss
+++ b/src/scss/sub/_gallery.scss
@@ -29,6 +29,14 @@
 
   .pop {
     width: 100%; height: 100vh; position: fixed; top: 0px; left: 0px; background: rgba(0,0,0,.9); padding: 5vw;
+
+    img {
+      width: 100%; height: 95%; object-fit: contain; margin-bottom: 15px;
+    }
+    p {
+      font: 14px/1.2 "arial"; color: #fff;
+      text-align: center;
+    }
   
     span {
       font: bold 14px/1 "arial"; color: #fff;
