--- a/src/css/style.css
+++ b/src/css/style.css
@@ -180,4 +180,45 @@ figure {
   cursor: pointer;
 }
 
+.youtube .inner .frame::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.youtube .inner .frame article {
+  width: 20%;
+  height: 500px;
+  float: left;
+  padding: 10px;
+  overflow: hidden;
+}
+.youtube .inner .frame article .inner {
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+.youtube .inner .frame article .inner .txt h2 {
+  font: bold 16px/1.2 "arial";
+  color: #555;
+  margin-bottom: 20px;
+}
+.youtube .inner .frame article .inner .txt p {
+  font: 12px/1.2 "arial";
+  color: #888;
+}
+.youtube .inner .frame article .inner .pic {
+  width: 100%;
+  height: 150px;
+}
+.youtube .inner .frame article .inner .pic img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 /*# sourceMappingURL=style.css.map */
