--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0px;
   padding: 0px;
@@ -201,24 +202,35 @@ figure {
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
+  /*
+    word-break: 텍스트의 줄바꿈 속성을 지정
+    - normal (한글은 한글자 기준, 영어는 단어기준으로 줄바꿈됨) default
+    - break-all (한글과 영문 모두 글자기준으로 줄바꿈)
+    - keep-all (한글 영어 모두 단어기준으로 줄바꿈)
+
+  */
 }
 .youtube .inner .frame article .inner .txt h2 {
   font: bold 16px/1.2 "arial";
   color: #555;
   margin-bottom: 20px;
+  word-break: break-all;
 }
 .youtube .inner .frame article .inner .txt p {
   font: 12px/1.2 "arial";
   color: #888;
+  word-break: break-all;
 }
 .youtube .inner .frame article .inner .pic {
   width: 100%;
   height: 150px;
+  overflow: hidden;
 }
 .youtube .inner .frame article .inner .pic img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transform: scale(1.5);
 }
 
 /*# sourceMappingURL=style.css.map */
