--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -13,21 +13,29 @@
           width: 100%; height: 100%; background: #fff; box-shadow: 5px 5px 15px rgba(0,0,0,.1); padding: 10px;
           display: flex; flex-wrap: wrap; align-content: space-between;
 
-          .txt {
+          /*
+            word-break: 텍스트의 줄바꿈 속성을 지정
+            - normal (한글은 한글자 기준, 영어는 단어기준으로 줄바꿈됨) default
+            - break-all (한글과 영문 모두 글자기준으로 줄바꿈)
+            - keep-all (한글 영어 모두 단어기준으로 줄바꿈)
+
+          */
+          .txt { 
             h2 {
-              font: bold 16px/1.2 "arial"; color: #555; margin-bottom: 20px;
+              font: bold 16px/1.2 "arial"; color: #555; margin-bottom: 20px; 
+              word-break: break-all;
             }
   
-            p {
+            p {           
               font: 12px/1.2 "arial"; color: #888;
+              word-break: break-all;
             }
-          }
-          
+          }          
 
           .pic {
-            width: 100%; height: 150px; 
+            width: 100%; height: 150px; overflow: hidden;
             img {
-              width: 100%; height: 100%; object-fit: cover;
+              width: 100%; height: 100%; object-fit: cover; transform: scale(1.5);
             }
           }
         }
