--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -33,12 +33,26 @@
           }          
 
           .pic {
-            width: 100%; height: 150px; overflow: hidden;
+            width: 100%; height: 150px; overflow: hidden; cursor: pointer;
+            
             img {
               width: 100%; height: 100%; object-fit: cover; transform: scale(1.5);
             }
           }
         }
+      }
+    }
+
+    .pop {
+      width: 100%; height: 100vh; position: fixed; top: 0px; left: 0px; background: rgba(0,0,0,.9); padding: 5vw;
+
+      iframe {
+        border: none; width: 100%; height: 100%;
+      }
+
+      span {
+        position: absolute; top: 3vw; right: 5vw; 
+        font: bold 14px/1 "arial"; color: #fff; cursor: pointer;
       }
     }
   }
