--- a/src/css/style.css
+++ b/src/css/style.css
@@ -190,15 +190,15 @@ figure {
   width: 20%;
   height: 500px;
   float: left;
-  padding: 10px;
+  padding: 13px;
   overflow: hidden;
 }
 .youtube .inner .frame article .inner {
   width: 100%;
   height: 100%;
   background: #fff;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
-  padding: 10px;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px 10px 10px;
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
