--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -7,10 +7,10 @@
 
       article {
         width: 20%; height: 500px; float: left;
-        padding: 10px; overflow: hidden;
+        padding: 13px; overflow: hidden;
 
         .inner {
-          width: 100%; height: 100%; background: #fff; box-shadow: 5px 5px 15px rgba(0,0,0,.1); padding: 10px;
+          width: 100%; height: 100%; background: #fff; box-shadow: 3px 3px 10px rgba(0,0,0,.1); padding: 20px 10px 10px;
           display: flex; flex-wrap: wrap; align-content: space-between;
 
           /*
@@ -34,7 +34,7 @@
 
           .pic {
             width: 100%; height: 150px; overflow: hidden; cursor: pointer;
-            
+
             img {
               width: 100%; height: 100%; object-fit: cover; transform: scale(1.5);
             }
