anime.js모션처리, window에 addEventListenr로 모션처리

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -120,6 +120,12 @@ figure {
   margin: 0px auto;
 }
 
+#box {
+  width: 200px;
+  height: 200px;
+  background: hotpink;
+}
+
 .gallery .inner > section::after {
   content: "";
   display: block;
