join에 form요소 생성 및 onChange이벤트 처리

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,8 +14,26 @@ a {
   outline: 0;
 }
 
+table {
+  border-collapse: collapse;
+  border: none;
+}
+table th, table td {
+  border: none;
+}
+
+fieldset {
+  border: none;
+}
+
 body {
   background: #efefef;
+}
+
+.h {
+  position: absolute;
+  top: -99999px;
+  opacity: 0;
 }
 
 header {
