--- a/src/scss/common/_reset.scss
+++ b/src/scss/common/_reset.scss
@@ -8,7 +8,21 @@ a {
   text-decoration: none;
   outline: 0;
 }
+table {
+  border-collapse: collapse;
+  border: none;
+
+  th, td {
+    border: none;
+  }
+}
+fieldset {
+  border: none;
+}
 
 body {
   background: #efefef;
+}
+.h {
+  position: absolute; top: -99999px; opacity: 0;
 }
