input요소 다음에 에러 객체 생성시 에러문구 출력

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -280,4 +280,9 @@ figure {
   cursor: pointer;
 }
 
+.join .inner .err {
+  font: 11px/1 "맑은 고딕";
+  color: hotpink;
+}
+
 /*# sourceMappingURL=style.css.map */
