--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -5,11 +5,7 @@ header {
     width: 1180px; height: 100px; margin: 0px auto; position: relative;
 
     h1 {
-      position: absolute; left: 0px; bottom: 20px;
-
-      a {
-        font: bold 24px/1 "arial"; color: #fff;
-      }
+      position: absolute; left: 0px; bottom: 20px;     
     }
 
     #gnb {
@@ -37,6 +33,8 @@ main {
     h1 {
       font: 30px/1 "arial"; color: #333;
       margin-bottom: 20px;
+
+      a {color:#333;}
     }
   }
 }
