--- a/src/css/style.css
+++ b/src/css/style.css
@@ -277,6 +277,12 @@ figure {
   cursor: pointer;
 }
 
+.location .inner #map {
+  width: 100%;
+  height: 500px;
+  background: #000;
+}
+
 .join .inner table {
   width: 100%;
   border-top: 2px solid #333;
