--- a/src/scss/sub/_location.scss
+++ b/src/scss/sub/_location.scss
@@ -3,5 +3,13 @@
     #map {
       width: 100%; height: 500px; background: #000;
     }
+
+    .branch li {
+      color: #333;
+
+      &.on {
+        color: hotpink;
+      }
+    }
   }
 }
