서브페이지 페이지 전환 트렌지션 적용

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,6 +72,13 @@ header .inner #gnb li a {
 
 main {
   padding: 100px 0px;
+  transition: 1s;
+  opacity: 0;
+  transform: translateY(100px);
+}
+main.on {
+  opacity: 1;
+  transform: translateY(0px);
 }
 main > .inner {
   width: 1180px;
