--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -25,7 +25,10 @@ header {
 }
 
 main {
-  padding: 100px 0px;
+  padding: 100px 0px; transition: 1s; opacity: 0; transform: translateY(100px);
+  &.on {
+    opacity: 1; transform: translateY(0px);
+  }
 
   >.inner {
     width: 1180px; min-height: 500px; margin: 0px auto;
