메인, 서브페이지 따라 header컴포넌트에 클래스명 차등적용

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,6 +70,17 @@ header .inner #gnb li a {
   color: #fff;
 }
 
+header.main {
+  background: #fff;
+}
+header.main #gnb li a {
+  color: #555;
+}
+
+header.sub {
+  background: #111;
+}
+
 main {
   padding: 100px 0px;
   transition: 1s;
