--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -24,6 +24,17 @@ header {
 
 }
 
+header.main {
+  background: #fff;
+
+  #gnb li a {
+    color: #555;
+  }
+}
+header.sub {
+  background: #111;
+}
+
 main {
   padding: 100px 0px; transition: 1s; opacity: 0; transform: translateY(100px);
   &.on {
