--- a/src/css/style.css
+++ b/src/css/style.css
@@ -145,18 +145,29 @@ footer .inner p {
 }
 figure {
   width: 100%;
-  height: 500px;
+  height: calc(100vh - 100px);
   background: cyan;
+}
+
+#news {
+  width: 100%;
+  height: 100vh;
+  background: orange;
+  position: relative;
+}
+
+#intro {
+  width: 100%;
+  height: 100vh;
+  background: lightgreen;
+  position: relative;
 }
 
 #info {
   width: 100%;
-  padding: 100px 0px;
-}
-#info .inner {
-  width: 1180px;
-  min-height: 300px;
-  margin: 0px auto;
+  height: 100vh;
+  background: pink;
+  position: relative;
 }
 
 .gallery .inner > section::after {
