세로 버튼 컴포넌트 추가

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -170,6 +170,25 @@ figure {
   position: relative;
 }
 
+#btns {
+  position: fixed;
+  top: 50%;
+  right: 50px;
+  transform: translateY(-50%);
+}
+#btns li {
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background: #fff;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+#btns li.on {
+  height: 80px;
+  color: #111;
+}
+
 .gallery .inner > section::after {
   content: "";
   display: block;
