메인 페이지 스크롤 모션 (오류버전- 메인 컴퍼넌트 분리 필요)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -183,10 +183,11 @@ figure {
   background: #fff;
   margin-bottom: 20px;
   cursor: pointer;
+  transition: 0.5s;
 }
 #btns li.on {
   height: 80px;
-  color: #111;
+  background: #111;
 }
 
 .gallery .inner > section::after {
