--- a/src/scss/main/_btns.scss
+++ b/src/scss/main/_btns.scss
@@ -11,10 +11,11 @@
     background: #fff;
     margin-bottom: 20px;
     cursor: pointer;
+    transition: 0.5s;
 
     &.on {
       height: 80px; 
-      color: #111;
+      background: #111;
     }
   }
 }
