--- a/src/css/style.css
+++ b/src/css/style.css
@@ -190,6 +190,18 @@ figure {
   background: #111;
 }
 
+.community .inner .showList article {
+  width: 100%;
+  border: 1px solid #aaa;
+  margin: 20px 0px;
+  padding: 20px;
+}
+.community .inner .showList article span {
+  cursor: pointer;
+  font-size: 12px;
+  color: hotpink;
+}
+
 .gallery .inner > section::after {
   content: "";
   display: block;
