--- a/src/css/style.css
+++ b/src/css/style.css
@@ -190,16 +190,16 @@ figure {
   background: #111;
 }
 
-.community .inner .showList article {
+.community .inner .inputBox {
   width: 100%;
+  padding: 50px;
+  margin-bottom: 50px;
   border: 1px solid #aaa;
-  margin: 20px 0px;
-  padding: 20px;
 }
-.community .inner .showList article span {
-  cursor: pointer;
-  font-size: 12px;
-  color: hotpink;
+.community .inner .showBox {
+  width: 100%;
+  padding: 50px;
+  border: 1px solid #aaa;
 }
 
 .gallery .inner > section::after {
