--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -2,10 +2,32 @@
   .inner {
     .inputBox {
       width: 100%; padding: 50px; margin-bottom: 50px; border: 1px solid #aaa;
+      input {
+        width: 60%; padding: 5px 10px; border: 1px solid #bbb; margin-bottom: 10px;
+      }
+      textarea {
+        width: 60%; padding: 10px; border: 1px solid #bbb; margin-bottom: 15px; resize: none;
+      }
+
+      button {
+        width: 150px; height: 30px; background: #555; border: none;
+        color: #fff; margin-right: 10px;
+      }
     } 
 
     .showBox {
       width: 100%; padding: 50px; border: 1px solid #aaa;
+
+      article {
+        width: 100%; padding: 20px; background: #fff; margin-bottom: 20px;
+
+        h2 {
+          font: bold 20px/1 'arial'; color: #555; margin-bottom: 5px;
+        }
+        p {
+          font: 12px/1.2 'arial'; color: #777;
+        }
+      }
     }
    
   }
