--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -32,6 +32,15 @@
           p {
             font: 12px/1.2 'arial'; color: #777;
           }
+
+          input {
+            width: 70%; padding: 5px 10px; border: 1px solid skyblue; background: lightcyan;
+            margin-bottom: 5px;
+          }
+          textarea {
+            width: 70%; padding: 10px; border: 1px solid skyblue; background: lightcyan;
+            resize: none;
+          }
         }
 
         .btns {
