--- a/src/css/style.css
+++ b/src/css/style.css
@@ -152,8 +152,18 @@ figure {
 #news {
   width: 100%;
   height: 100vh;
-  background: orange;
+  background: #eee;
   position: relative;
+  padding: 150px 0px;
+}
+#news .inner {
+  width: 1180px;
+  margin: 0px auto;
+  position: relative;
+}
+#news .inner h2 {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 #intro {
