--- a/src/scss/main/_news.scss
+++ b/src/scss/main/_news.scss
@@ -1,6 +1,15 @@
 #news {
   width: 100%;
   height: 100vh;
-  background: orange;
+  background: #eee;
   position: relative;
+  padding: 150px 0px;
+
+  .inner {
+    width: 1180px; margin: 0px auto; position: relative;
+
+    h2 {
+      text-align: center; margin-bottom: 20px;
+    }
+  }
 }
