--- a/src/css/style.css
+++ b/src/css/style.css
@@ -165,6 +165,29 @@ figure {
   text-align: center;
   margin-bottom: 20px;
 }
+#news .inner .txtBox {
+  width: 100%;
+  height: 40vh;
+  display: flex;
+  justify-content: space-between;
+  align-content: space-between;
+  flex-wrap: wrap;
+}
+#news .inner .txtBox article {
+  width: 32%;
+  height: 48%;
+  background: #fff;
+  padding: 50px;
+}
+#news .inner .txtBox article h3 {
+  font: bold 20px/1 "arial";
+  color: #333;
+  margin-bottom: 20px;
+}
+#news .inner .txtBox article p {
+  font: 14px/1.2 "arial";
+  color: #666;
+}
 
 #intro {
   width: 100%;
