--- a/src/scss/main/_news.scss
+++ b/src/scss/main/_news.scss
@@ -11,5 +11,23 @@
     h2 {
       text-align: center; margin-bottom: 20px;
     }
+
+    .txtBox {
+      width: 100%; height: 40vh; 
+      display: flex; justify-content: space-between;
+      align-content: space-between; flex-wrap: wrap;
+
+      article {
+        width: 32%;  height: 48%; background: #fff;
+        padding: 50px;
+
+        h3 {
+          font: bold 20px/1 'arial'; color: #333; margin-bottom: 20px;
+        }
+        p {
+          font: 14px/1.2 'arial'; color: #666;
+        }
+      }
+    }
   }
 }
