메인컴포넌트에서 store의 reducer데이터 출력

--- a/src/scss/main/_intro.scss
+++ b/src/scss/main/_intro.scss
@@ -3,4 +3,13 @@
   height: 100vh;
   background: lightgreen;
   position: relative;
+  padding: 150px 0px;
+
+  .inner {
+    width: 1180px; margin: 0px auto;
+
+    h2 {
+      text-align: center; margin-bottom: 20px;
+    }
+  }
 }
