--- a/src/css/style.css
+++ b/src/css/style.css
@@ -194,6 +194,15 @@ figure {
   height: 100vh;
   background: lightgreen;
   position: relative;
+  padding: 150px 0px;
+}
+#intro .inner {
+  width: 1180px;
+  margin: 0px auto;
+}
+#intro .inner h2 {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 #info {
