--- a/src/scss/main/_info.scss
+++ b/src/scss/main/_info.scss
@@ -3,4 +3,13 @@
   height: 100vh;
   background: pink;
   position: relative;
+  padding: 150px 0px;
+
+  .inner {
+    width: 1180px; margin: 0px auto; position: relative;
+
+    h2 {
+      text-align: center; margin-bottom: 20px;
+    }
+  }
 }
